--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "babel-plugin-transform-vue-jsx",
-  "version": "4.0.1",
-  "description": "Babel plugin for Vue 2.0 JSX",
-  "main": "index.js",
+  "version": "5.0.1",
+  "description": "Babel plugin for Vue 3.0 JSX",
+  "main": "dist/index.js",
   "unpkg": "dist/babel-plugin-transform-vue-jsx.min.js",
   "files": [
-    "index.js",
-    "lib",
     "dist"
   ],
   "scripts": {
     "lint": "eslint index.js",
-    "test": "npm run lint && mocha --require @babel/register",
-    "dev": "cd example && webpack --watch",
-    "build": "webpack -d",
+    "test": "yarn run lint && jest",
+    "dev": "cd example && webpack-dev-server --watch",
+    "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -34,22 +32,32 @@
   "dependencies": {
     "esutils": "^2.0.2"
   },
-  "peerDependencies": {
-    "babel-helper-vue-jsx-merge-props": "^2.0.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.0.0-beta.40",
     "@babel/helper-module-imports": "^7.0.0-beta.40",
+    "@babel/plugin-syntax-jsx": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.40",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-loader": "8.0.0-beta.0",
-    "@babel/plugin-syntax-jsx": "^7.0.0-beta.40",
     "chai": "^4.1.2",
-    "eslint": "^4.16.0",
-    "eslint-plugin-vue-libs": "^2.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue-libs": "^4.0.0",
+    "jest": "^25.1.0",
     "mocha": "^5.0.0",
-    "vue": "^2.5.13",
-    "webpack": "^3.11.0"
+    "mocha-jsdom": "^2.0.0",
+    "prettier": "^1.19.1",
+    "rollup": "^2.0.6",
+    "rollup-plugin-babel": "^4.4.0",
+    "vue": "^3.0.0-alpha.8",
+    "vue-loader": "^16.0.0-alpha.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
